<resources>
    <string name="app_name">Clinical Issue Log</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_as_a_practitioner">Register as a Practitioner</string>
    <string name="login">Login</string>
    <string name="login_as_a_practitioner">Login as a practitioner</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="password_again">Password again</string>
    <string name="birth_date">Birth date</string>
    <string name="qualification_code">Qualification code</string>
    <string name="qualification_issuer">Qualification issuer</string>
    <string name="registration">Registration</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="active">Active:</string>
    <string name="gender">Gender</string>
    <string name="patient_name_label">Patient:</string>
    <string name="severity_label">Severity:</string>
    <string name="code_label">Code:</string>
    <string name="identified_label">Identified:</string>
    <string name="new_issue">New issue</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="add_new_detected_issue">Add new detected issue</string>
    <string name="patient">Patient</string>
    <string name="status_label">Status:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="gender_register">Gender:</string>
    <string name="detail_label">Details:</string>
    <string name="identified_datetime">Identified datetime:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="detected_issue">Detected issue</string>
    <string name="code">Code</string>
    <string name="status">Status</string>
    <string name="severity">Severity</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="identified_date_time">Identified date time</string>
    <string name="go_back">Go back</string>
    <string name="confirm">Confirm</string>
    <string-array name="gender">
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="other">Other</item>
    </string-array>
    <string-array name="severity">
        <item name="low">low</item>
        <item name="moderate">moderate</item>
        <item name="high">high</item>
    </string-array>
</resources>