<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textRegisterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            />

        <EditText
            android:id="@+id/editTextPractitionerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textSize="20sp"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_below="@+id/textRegisterTitle"/>

        <EditText
            android:id="@+id/editTextPractitionerBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:textSize="20sp"
            android:autofillHints="birthDate"
            android:inputType="datetime"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_below="@id/editTextPractitionerName"
            />

        <EditText
            android:id="@+id/editTextPractitionerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:autofillHints="email"
            android:inputType="textEmailAddress"
            android:layout_below="@id/editTextPractitionerBirthDate"/>

        <EditText
            android:id="@+id/editTextPractitionerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_below="@id/editTextPractitionerEmail" />

        <EditText
            android:id="@+id/editTextPractitionerPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_again"
            android:textSize="20sp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_below="@id/editTextPractitionerPassword"/>


        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/gender"
            android:layout_below="@id/editTextPractitionerPasswordAgain"/>

        <RadioGroup
            android:id="@+id/radioGroupActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerGender"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textActiveLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/radioGroupActive"
                android:text="@string/active"
                android:textSize="20sp"
                android:focusedByDefault="true"
                />

            <RadioButton
                android:id="@+id/radioButtonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/radioButtonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

        </RadioGroup>

        <EditText
            android:id="@+id/editTextPractitionerQualificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qualification_code"
            android:textSize="20sp"
            android:autofillHints="qualificationCode"
            android:inputType="text"
            android:layout_below="@+id/radioGroupActive"/>

        <EditText
            android:id="@+id/editTextPractitionerQualificationIssuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qualification_issuer"
            android:textSize="20sp"
            android:autofillHints="qualificationIssuer"
            android:inputType="text"
            android:layout_below="@+id/editTextPractitionerQualificationCode"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@id/editTextPractitionerQualificationIssuer"
            android:onClick="doRegistration"
            />

    </RelativeLayout>

</ScrollView>