<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewDetectedIssue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewDetectedIssueTitle"
            android:text="@string/detected_issue"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/viewDetectedIssuePatientLabel"
            android:text="@string/patient"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:labelFor="@id/viewDetectedIssuePatient"
            android:layout_below="@id/viewDetectedIssueTitle"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssuePatient"
            android:text="patient name placeholder"
            android:textSize="18sp"
            android:textAlignment="center"
            android:labelFor="@id/createDetectedIssuePatient"
            android:layout_below="@id/viewDetectedIssuePatientLabel"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssueCodeLabel"
            android:text="@string/code"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:labelFor="@id/viewDetectedIssueCode"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/viewDetectedIssuePatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssueCode"
            android:text="code placeholder"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/viewDetectedIssueCodeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssueStatusLabel"
            android:text="@string/status"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:labelFor="@id/viewDetectedIssueStatus"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/viewDetectedIssueCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssueStatus"
            android:text="code placeholder"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/viewDetectedIssueStatusLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssueSeverityLabel"
            android:text="@string/severity"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:labelFor="@id/viewDetectedIssueSeverity"
            android:layout_below="@id/viewDetectedIssueStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssueSeverity"
            android:text="severity placeholder"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/viewDetectedIssueSeverityLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssueDetailLabel"
            android:text="@string/detail"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:labelFor="@id/viewDetectedIssueDetail"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/viewDetectedIssueSeverity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/viewDetectedIssueDetail"
            android:text="detailaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa placeholder"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@id/viewDetectedIssueDetailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/viewDetectedIssueDetail">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_marginEnd="40dp"
                android:onClick="editDetectedIssue"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:onClick="deleteDetectedIssue"
                />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>